# FrictionSim2D

./: .gitignore  AGENTS.md  CHAT_HANDOFF.md  LICENSE  README.md  pyproject.toml  settings.yaml
FrictionSim2D_project/: README.md  pyproject.toml
FrictionSim2D_project/conda/: meta.yaml
conda/: conda_build_config.yaml  environment-aiida.yml  environment.yml  meta.yaml  post-install-aiida.sh
documentation/: HPC_TWO_PHASE_JOBS.md  PROVENANCE_ARCHITECTURE.md  README.md  aiida_workflows.md  commands.md  configuration_guide.md  essentials.md  examples.md  installation.md  mainpage.md  python_api_guide.md  settings_reference.md
documentation/publication/: README.md  mos2_comparison_data.json  mos2_reaxff_comparison.json  plots_publication.json  trib_index.json
examples/: afm_config.ini  material_list.txt  run.py  sheet_config.ini
examples/potentials/sw/: mos2_jiang2.sw
pbs_scripts/pbs_tests/l1/: system_100x100.pbs  system_50x50.pbs  system_75x75.pbs
pbs_scripts/pbs_tests/l2/: system_100x100.pbs  system_50x50.pbs  system_75x75.pbs
pbs_tests/: slide_2.pbs  slide_3.pbs
pbs_tests/l1/: slide_1_16c_ephem.pbs  slide_1_16c_tmpdir.pbs  slide_1_32c_ephem.pbs  slide_1_32c_tmpdir.pbs  slide_1_64c_ephem.pbs  slide_1_64c_tmpdir.pbs
pbs_tests/l2/: slide_2_16c_ephem.pbs  slide_2_16c_tmpdir.pbs  slide_2_32c_ephem.pbs  slide_2_32c_tmpdir.pbs  slide_2_64c_ephem.pbs  slide_2_64c_tmpdir.pbs
scripts/: log.lammps  material_list_reduced_l1.txt  material_list_reduced_l2.txt  materials_list_reduced.txt
scripts/cif/: AlS.cif  GaS.cif  InSe.cif  b-SiGe.cif  b-SnGe.cif  b-SnSe.cif  b-antimonene.cif  blue_phosphorus.cif  h-CoTe2.cif  h-MoS2.cif  h-NiSe2.cif  h-VTe2.cif  h-WS2.cif  indiene.cif  p-CS.cif  p-SiTe.cif  t-MnTe2.cif  t-MoSe2.cif  t-PdS2.cif  t-PdSe2.cif  t-PtS2.cif  t-ReS2.cif  t-RhTe2.cif  t-TiS2.cif  t-VTe2.cif
scripts/mos2_sheet/: log.lammps  run.py  sheet_config.ini
scripts/run_afm/: afm_config.ini  run.py
scripts/run_sheet/: run.py  sheet_config.ini
src/: __init__.py  cli.py
src/FrictionSim2D/: __init__.py  cli.py
src/FrictionSim2D/aiida/: __init__.py  launch.py  workflows.py
src/FrictionSim2D/builders/: afm.py  components.py  sheetonsheet.py
src/FrictionSim2D/core/: __init__.py  base_builder.py  config.py  model_init.py  potential_manager.py  simulation_base.py  utils.py
src/aiida/: __init__.py  configure_rabbitmq.sh  install_conda_hooks.sh  integration.py  query.py  setup.py  start_aiida.sh  submit.py  workchain.py
src/api/: __init__.py  auth.py  client.py  server.py
src/builders/: __init__.py  afm.py  components.py  sheetonsheet.py
src/core/: __init__.py  config.py  path_utils.py  potential_manager.py  run.py  simulation_base.py  utils.py
src/data/: __init__.py  database.py  models.py  validation.py
src/hpc/: manifest.py  scripts.py
src/interfaces/: __init__.py  atomsk.py  jinja.py  lammps.py
src/postprocessing/: __init__.py  plot_common.py  plot_correlation.py  plot_data.py  plot_derived.py  plot_mixin_base.py  plot_ranking.py  plot_stick_slip.py  plot_style.py  plot_summary.py  plot_timeseries.py  read_data.py
tests/: aiida_Test.py  aiida_test.ipynb  conftest.py  h-mos2_1.lmp  hmos2_min.lammpstrj  kim_test.ipynb  kim_test.lmp  sw_test.sw  test_afm_builder.py  test_aiida_calcjob.py  test_api.py  test_api_auth.py  test_api_client.py  test_api_server_visibility.py  test_atomsk.py  test_base_builder.py  test_builders.py  test_cli.py  test_config.py  test_database.py  test_hpc_manifest.py  test_hpc_scripts.py  test_jinja_interface.py  test_lammps_interface.py  test_number.ipynb  test_plot_data.py  test_plot_derived.py  test_potential_manager.py  test_run.py  test_sheetonsheet_builder.py  test_simulation_base.py  test_utils.py  tests.ipynb
tribo_2D/: afm.py  afm_simplified.py  build.py  model_init.py  sheet.py  sheetvsheet.py  sub.py  tip.py  utilities.py
tribo_2D/Example_scripts/: afm_config.ini  afm_config_temp.ini  run_multiple.py  run_single.py  sheet_config.ini  sheet_config_temp.ini
tribo_2D/materials/: Si.lmp
tribo_2D/settings/: settings.yaml  settings_default.yaml
(+2286 files in other folders)
